cmake_minimum_required(VERSION 3.10)
project(lisp-interpreter C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_executable(lisp lisp.c)

if (MSVC)
    # ฒฟทึ VS ฐๆฑพ add_compile_options ฒปษ๚ะง
    target_compile_options(lisp PRIVATE 
        /W4      # พฏธๆตศผถ4
        /WX      # พฏธๆสำฮชดํฮ๓
        /wd4996  # บ๖ยิ C4996  #'strcpy': This function or variable may be unsafe. Consider using strcpy_s instead.
    )
else()
     add_compile_options(-Werror -Wall -Wextra)
endif()

if (MSVC)
    # ษ่ึรฦ๔ถฏฯ๎
    set_property(DIRECTORY ${CMAKE_SOURCE_DIR}
            PROPERTY VS_STARTUP_PROJECT lisp)
    # ษ่ึรนคื๗ฤฟยผ
    set_property(TARGET lisp PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
endif()
